--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 datasets>=2.16,<3
-huggingface_hub>=0.20
 numpy>=1.24
 tqdm>=4.66
 scikit-learn>=1.3
 torch>=2.1
 transformers>=4.40
+accelerate>=0.30
+peft>=0.10
