Add properly named reports/slides

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ embeddings/*
 !presentation/presentation.pdf
 !report/document.pdf
 !design-document/document.pdf
+!presentation/AIR_SLIDES_G27.pdf
+!report/AIR_REPORT_G27.pdf
